# TelegramVPN

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yaml  docker-entrypoint.sh  handlers.py  main.py  pyproject.toml  requirements.txt  run_telegram_app.py
article/: article.MD
backend/: configuration_message.py
dialogs/: __init__.py  devices.py  main.py  users.py
docker/: Dockerfile_bot  Dockerfile_site  docker-entrypoint_bot.sh  docker-entrypoint_site.sh  init_db.sql  nginx.conf
firezone_api/: __init__.py  api.py  exceptions.py  qr_code_generator.py
firezone_api/generators/: __init__.py  keys.py  qr.py
firezone_api/models/: __init__.py  device.py  string_datetime_view.py  user.py
frontend/: config.py
frontend/frontend/: settings.py
frontend/landing_page/: landing_data.py  urls.py  views.py
frontend/landing_page/templates/: base.html
frontend/landing_page/templates/landing_page/: index.html
frontend/site_auth/: apps.py  forms.py  models.py  urls.py  views.py
frontend/site_auth/migrations/: 0001_initial.py
frontend/site_auth/templates/site_auth/: base_form.html  login.html  profile.html  register.html
frontend/static/css/: my_styles.css
frontend/user_profile/: forms.py  urls.py  views.py
frontend/user_profile/templates/user_profile/: add_device.html  created_device_information.html  device_confirm_delete.html  profile.html
frontend/vpn/: context.py  settings.py  urls.py
telegram_bot/: app.py  config.py  handlers.py
telegram_bot/backend/: __init__.py  configuration_message.py  password_generator.py  utils.py
telegram_bot/backend/db/: __init__.py  actions.py  db.py  models.py
telegram_bot/dialogs/: __init__.py  admin.py  devices.py  main.py  register.py  users.py
telegram_bot/dialogs/admin/: admin.py  users.py
telegram_bot/firezone_api/: __init__.py  api.py
telegram_bot/firezone_api/models/: device.py  user.py
(+8 files in other folders)
