[tool.poetry]
name = "telegram-vpn"
version = "0.1.0"
description = ""
authors = ["Andrey Silnykh"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_vpn"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
envparse = "^0.2.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
pydantic = "^1.10.9"
pywgkey = "^1.0.0"
qrcode = "^7.4.2"
pillow = "10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
