[tool.poetry]
name = "telegram-vpn"
version = "0.1.0"
description = ""
authors = ["Andrey Silnykh"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
envparse = "^0.2.0"
python-dotenv = "^1.0.0"
aiohttp = "3.8.5"
pydantic = "^1.10.9"
qrcode = "^7.4.2"
pillow = "10.0.0"
configparser = "^6.0.0"
django = "^4.2.4"
certifi = ">=2023.07.22"
sqlalchemy = {version = ">=1.4,<2.0", extras = ["asyncio"]}
alembic = "^1.11.2"
black = "^23.7.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
wireguard-tools = "^0.4.4"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
